--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,155 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/****** Only for coding purposes *******/
+/*
+header .content-wrapper,
+footer .content-wrapper {
+  outline: 2px dotted orange;
+}
+
+.hero-area .content-wrapper {
+  outline: 2px dotted blue;
+}
+
+aside .content-wrapper {
+  outline: 2px dotted red;
+}
+
+.features .content-wrapper {
+  outline: 2px dotted green;
+}
+
+.reviews .content-wrapper {
+  outline: 2px dotted purple;
+}
+
+article,
+.copyright {
+  outline: 2px double cyan;
+}
+*/
+/****** End only for coding purposes ******/
+
+
+
+/********* BASE HEADER AND FOOTER STYLES *********/
+
+header,
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/******** MOBILE STYLES - HOMEPAGE ********/
+
+/* HERO AREA */
+
+.hero-area {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+/* ASIDE */
+
+aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* FEATURES */
+
+.features {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* REVIEWS */
+
+.reviews {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+/****** ABOUT PAGE ******/
+
+.mission {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/****** FAQ PAGE ******/
+
+.faq {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.faq .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
